<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:background="@drawable/rounded_background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_user"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txt_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="X"
            android:textSize="22dp"
            android:layout_marginTop="7dp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:gravity="left"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_this_user"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/delete"
        android:textSize="14sp"
        android:layout_marginTop="10sp"
        android:layout_gravity="center"/>

</LinearLayout>