<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:background="@drawable/rounded_background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_detail"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txt_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="X"
            android:textSize="22dp"
            android:layout_marginTop="7dp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:gravity="left"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10sp"
        android:clickable="true">

        <ImageView
            android:id="@+id/circle_camera"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/icon_add_camera"/>

        <ImageView
            android:id="@+id/user_picture"
            android:layout_width="170dp"
            android:layout_height="170dp"/>

        <ImageView
            android:id="@+id/circle_frame"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:background="@drawable/circle_frame"/>

    </RelativeLayout>


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/lb_birthday"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:textSize="17sp"
            android:text="@string/birthday"/>

        <TextView
            android:id="@+id/edit_birthday"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/date_mask"/>

        <ImageView
            android:id="@+id/btn_calendar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_calendar"
            android:layout_marginLeft="10dp"
            android:clickable="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/save"
        android:textSize="14sp"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="10sp"
        android:layout_gravity="center"/>

</LinearLayout>